# Git-Tasks

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.tasks/projects/project_019ef272ecd37382949ffdd3815763c1/events/: 019ef272ecd37382949ffdeafb054242-created.json
.tasks/projects/project_019ef27857a777b0bf215a002e508ebc/events/: 019ef27857a777b0bf215a10727637f4-created.json
.tasks/tasks/task_019ef278020c7901b52bcf493b3c58ee/events/: 019ef278020c7901b52bcf55ce59aef4-created.json  019f3003499e7751b36f8cdbc771480b-description_updated.json  019f302fd2947ff39d6589de9a3050d5-status_changed.json  019f3038f03579409611e1f1c89c1344-status_changed.json
apps/cli/: Cargo.toml  README.md
apps/cli/src/: client.rs  main.rs  render.rs  workspace.rs
apps/cli/src/cmd/: mod.rs  project.rs  status.rs  task.rs  workspace.rs
apps/server/: Cargo.toml  README.md
apps/server/src/: error.rs  http.rs  main.rs  state.rs
apps/server/src/http/: mod.rs  projects.rs  statuses.rs  tasks.rs  workspaces.rs
apps/tauri/: README.md  index.html  package.json
apps/tauri/src/: App.css  App.tsx  markdown.ts  types.ts
apps/tauri/src-tauri/: Cargo.toml
apps/tauri/src-tauri/src/: daemon.rs  error.rs  lib.rs  main.rs
apps/tauri/src-tauri/src/app/: action.rs  mod.rs  state.rs  view.rs
apps/tauri/src-tauri/src/shared/: id.rs  mod.rs
apps/tauri/src/components/: AddRow.tsx  CreateProjectDialog.tsx  DescriptionSnapshotDialog.css  GhostTextField.css  Header.tsx  List.tsx  MarkdownEditor.css  MarkdownEditor.tsx  ProjectsScreen.tsx  Row.tsx  Screen.tsx  Sidebar.tsx  TaskDetailScreen.tsx  TasksScreen.tsx  header.css  list-screen.css  sidebar.css
docs/: README.md  architecture.md  data-model.md  events-data-store.md  http-api.md  ids.md  seeds.md
scripts/: dev.sh
src/: App.css  App.tsx  path.ts  time.ts  types.ts  useView.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  projects.rs  statuses.rs  tasks.rs
src-tauri/src/app/: action.rs  state.rs  view.rs
src-tauri/src/shared/: id.rs  store.rs
src/components/: AddRow.tsx  ChangeStatusDialog.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DescriptionSnapshotDialog.tsx  GhostTextField.tsx  MoveDialog.tsx  ProjectsScreen.tsx  RenameDialog.tsx  Row.tsx  SelectRepo.css  SelectRepo.tsx  TaskDetailScreen.css  TasksScreen.tsx  header.css
